--- a/index.css
+++ b/index.css
@@ -1,64 +1,63 @@
-.logo {
-    margin-bottom: 40px;
-    letter-spacing: 0.7em;
-  }
-  
-  .productgalleries{
-      margin-top: 20px;
-      
-  }
-  
-  .slider{
-    display:inline-block;
-    overflow:hidden;
-  }
-  
-  a:before {
-   content:attr(rel);
-   position:absolute;
-   top:20px;
-  }
-  
-  a{
-      position:relative;
-      top:0;
-  }
-  
-  a:hover {
-     top:-20px; 
-  }
-  form  {
-    width: 80%;
-    margin: 0 auto;
-    margin-top: 10px;
-  }
-  fieldset  {
-    border: 1px solid #ececec;
-    margin-bottom: 5px;
-  }
-  legend  {
-    text-transform: uppercase;
-  }
-  .label  {
-    width: 160px;
-    float: left;
-    text-align: right;
-    margin-right: 10px;
-    text-transform: uppercase;
-    padding-top: 5px
-  }
-  input[type = text]  {
-    margin-bottom: 5px;
-  }
-  input[type = submit]  {
-    margin-top: 10px;
-    margin-left: 170px;
-    background-color: #fff;
-    border: 1px solid #ececec;
-    padding: 5px 10px;
-    text-transform: uppercase;
-    font-size: 1em;
-  }
-  #creditCard  {
-    margin-top: 5px;
-  }
+
+
+/*
+** Style Simple Ecommerce Theme for Bootstrap 4
+** Created by T-PHP https://t-php.fr/43-theme-ecommerce-bootstrap-4.html
+*/
+
+.bloc_left_price {
+  color: #c01508;
+  text-align: center;
+  font-weight: bold;
+  font-size: 150%;
+}
+.category_block li:hover {
+  background-color: #007bff;
+}
+.category_block li:hover a {
+  color: #ffffff;
+}
+.category_block li a {
+  color: #343a40;
+}
+.add_to_cart_block .price {
+  color: #c01508;
+  text-align: center;
+  font-weight: bold;
+  font-size: 200%;
+  margin-bottom: 0;
+}
+.add_to_cart_block .price_discounted {
+  color: #343a40;
+  text-align: center;
+  text-decoration: line-through;
+  font-size: 140%;
+}
+.product_rassurance {
+  padding: 10px;
+  margin-top: 15px;
+  background: #ffffff;
+  border: 1px solid #6c757d;
+  color: #6c757d;
+}
+.product_rassurance .list-inline {
+  margin-bottom: 0;
+  text-transform: uppercase;
+  text-align: center;
+}
+.product_rassurance .list-inline li:hover {
+  color: #343a40;
+}
+.reviews_product .fa-star {
+  color: gold;
+}
+.pagination {
+  margin-top: 20px;
+}
+footer {
+  background: #343a40;
+  padding: 40px;
+}
+footer a {
+  color: #f8f9fa!important
+}
